# particle-simulator

./: .gitignore  CMakeLists.txt  Particle.cpp  Particle.h  ParticleSystem.cpp  ParticleSystem.h  PhysicsOpenCL.cpp  PhysicsOpenCL.h  PhysicsSequential.cpp  PhysicsSequential.h  README.md  kernel.cl  main.cpp  util.cpp  util.h
